pkl-core/src/test/files/LanguageSnippetTests/input/errors/parser14.pkl
// note: file ends with a newline

x = List(1)
///[1,2,3]
